[package]
name = "bevy-lighting-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy_prototype_debug_lines = "0.3.2"
c2 = { path = "./lib/cute-c2/cute-c2" }
bevy_mod_raycast = { git = "https://github.com/aevyrie/bevy_mod_raycast", branch = "master", version = "0.2" }